--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,2 +1,5 @@
-<h1>Your score</h1>
-<p>Score: <%= @score %></p>
+<div class="container m-3">
+  <h1>Your score</h1>
+  <p>Score: <%= @score %></p>
+  <%= link_to "Play again", "new" %>
+</div>
