--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -2,4 +2,6 @@
   <h1>Your score</h1>
   <p>Score: <%= @score %></p>
   <%= link_to "Play again", "new" %>
+
+  <h2>Game score: <%= params[:word].length %></h2>
 </div>
